tweak intro/exp1 and update the reference
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -173,13 +173,13 @@ Experts modulate their performance of actions for teaching purposes, performing 
 \hypertarget{introduction}{%
 \section{1. Introduction}\label{introduction}}
 
-Deliberate teaching has supported human skill transmission over generations and provides a key route for learning (Thornton \& Raihani, 2008; Tomasello, 2016). Experts modulate their behaviour so that novices can extract relevant information to learn a novel skill. In particular, adults modulate their speech (motherese) and actions (motionese) when demonstrating a skill to infant learners (Brand, Baldwin, \& Ashburn, 2002; Fernald, 1985). These modulations include slowing down and exaggerating sounds and actions. Similar findings were obtained in studies with adult learners, where exaggerations were observed when native British English speakers were talking to first language English learners (Uther, Knoll, \& Burnham, 2007) and when skilled adults were teaching xylophone melodies to novices (McEllin, Knoblich, \& Sebanz, 2017). The observed modulations are thought to provide communicative signals that can facilitate learning by affecting attention and memory (Csibra \& Gergely, 2009).
+Deliberate teaching has supported human skill transmission over generations and provides a key route for learning (Thornton \& Raihani, 2008; Tomasello, 2016). Experts modulate their behaviour so that novices can extract relevant information to learn a novel skill. In particular, adults modulate their speech (motherese) and actions (motionese) when demonstrating a skill to infant learners (Brand, Baldwin, \& Ashburn, 2002; Saint-Georges et al., 2013). These modulations include slowing down and exaggerating sounds and actions. Similar findings were obtained in studies with adult learners, where exaggerations were observed when native British English speakers were talking to first language English learners (Uther, Knoll, \& Burnham, 2007) and when skilled adults were teaching xylophone melodies to novices (McEllin, Knoblich, \& Sebanz, 2017). The observed modulations are thought to provide communicative signals that can facilitate learning by affecting attention and memory (Csibra \& Gergely, 2009).
 
 Previous research has shown that demonstrators not only adjust their gestures (Campisi \& Özyürek, 2013) and actions (Fukuyama et al., 2015) to learners' skills but engage in specific action modulations to highlight particular aspects of demonstrated actions. For example, Schaik, Meyer, Ham, and Hunnius (2019) showed that adults used specific action modulations for demonstrating different action effects of objects to infants. Ho, Littman, MacGlashan, Cushman, and Austerweil (2016) found that demonstrators chose costly movement paths at structurally important points to disambiguate one goal over other possibilities.
 
 Importantly, in some domains teaching requires not only demonstrating \emph{what} to do, but \emph{how} to perform actions. In artistic contexts, novices need to learn how exactly to perform actions by relying on particular techniques (Sloboda, 2000). For example, when playing a piece of music on the piano, it is not sufficient to press the keys in the correct order, but learners need to be able to implement expressive techniques (Juslin, 2003). This raises the question of whether and how experts modulate their actions during didactic demonstration in artistic contexts, where expressivity is an integral part of what learners need to acquire. Studying action modulations that serve the teaching of artistic techniques is also of broader theoretical importance: It can show whether action modulations can be used to selectively highlight subtle aspects of actions that define expert performance.
 
-In the present study, we employed musical expressive techniques as skills to be taught because multiple properties of the performance (e.g., timing, articulation, loudness) can be modulated at the same time. Specific and subtle aspects of the performance may need to be highlighted to teach a respective technique. Pianists were asked to perform a piece in order to demonstrate to a learner how to implement the notated expressions (teaching condition) and to play the same piece for an audience (performing condition). Two basic expressive techniques in piano performance were used: articulation (legato and staccato) and dynamics (forte and piano).
+In the present study, we employed musical expressive techniques as skills to be taught because multiple properties of the performance (e.g., timing, smoothness, loudness) can be modulated at the same time. Specific and subtle aspects of the performance may need to be highlighted to teach a respective technique. Pianists were asked to perform a piece in order to demonstrate to a learner how to implement the notated expressions (teaching condition) and to play the same piece for an audience (performing condition). Two basic expressive techniques in piano performance were used: articulation (legato and staccato) and dynamics (forte and piano).
 
 If experts rely on generic action modulations, it can be expected that they will play more slowly during didactic demonstration, regardless of the kind of expressive techniques to be taught. To the extent that experts use action modulations to support their teaching of specific expressive techniques, they should produce longer legato and shorter staccato when teaching articulation whereas they should produce louder forte and softer piano when teaching dynamics. Furthermore, one could speculate that they might produce modulations specifically at structurally important points that best highlight the technique to be taught. Importantly, they should avoid modulating irrelevant properties of expression, e.g., the smoothness of the sound while teaching dynamics.
 
@@ -194,7 +194,7 @@ In Experiment 1, we employed a simple musical scale to examine whether and how s
 \hypertarget{participants}{%
 \subsubsection{2.1.1. Participants}\label{participants}}
 
-We recruited 36 piano experts who played the piano for at least the past 10 years or were studying advanced piano performance at a music school at the time of recruitment. In order to ensure that participants had sufficient motor skills to perform the piece, we asked them to practise the piece with the non-expressive sheet music (\emph{Figure \ref{fig:stimuli}, A}) in the lab. Once they could perform the piece without pitch errors twice consecutively within 5 attempts, the experiment started. Those who could not meet this requirement were excluded from data analysis (as a result, none of the participants were excluded based on this criterion). For data analysis, we excluded three participants due to experimental errors, and two participants because they deviated substantially from the prescribed tempo (outside 2 standard deviations from the average tempo across participants). Thirty-one participants (15 female) were included in data analysis. Most participants were right-handed (left: 2, ambidextrous: 2). They had 12.45 years of practice on average (\emph{SD} = 5.66). All participants gave their informed consent before the experiment started and received vouchers for their participation. The study was approved by the United Ethical Review Committee for Research in Psychology (EPKEB) in Hungary.
+We recruited 36 piano experts who played the piano for at least the past 10 years or were studying advanced piano performance at a music school at the time of recruitment. For data analysis, we excluded three participants due to experimental errors, and two participants because they deviated substantially from the prescribed tempo (outside 2 standard deviations from the average tempo across participants). Thirty-one participants (15 female) were included in data analysis. Most participants were right-handed (left: 2, ambidextrous: 2) with a mean age of 24.16 (\emph{SD} = 4.26). They had 12.45 years of practice on average (\emph{SD} = 5.66). All participants gave their informed consent before the experiment started and received vouchers for their participation. The study was approved by the United Ethical Review Committee for Research in Psychology (EPKEB) in Hungary.
 
 \hypertarget{apparatus-and-stimuli}{%
 \subsubsection{2.1.2. Apparatus and stimuli}\label{apparatus-and-stimuli}}
@@ -217,9 +217,9 @@ At the end of the experiment, participants filled in a questionnaire asking abou
 
 Three dependent variables were computed for data analysis. Interonset intervals (IOIs) are the intervals between onsets of adjacent notes and provide a measure of tempo. Key-overlap time (KOT) is the difference between the offset time of the current tone (i.e., key release time) and the onset time of the ensuing tone, and measures the smoothness of musical sequences (Bresin \& Battel, 2000). A positive value indicates smooth legato styles due to overlap between the current and ensuing tone whereas a negative value indicates sharp staccato styles due to separation between the current and ensuing tone. Tone intensity is assessed by key velocity (KV) and measures the loudness of a musical note. The value of KV in MIDI varies between 0 (minimum) and 127 (maximum).
 
-Data cleaning, preprocessing and statistical analysis were performed in R version 4.0.5. For statistical analysis, only 16th notes with expressive notations were included. Overall, three trials were excluded from data analysis because participants did not follow the sheet music or stopped performing before the end. Pitch errors were identified by comparing the sequence of musical notes produced by a participant with the sequence of musical notes according to the sheet music. Pitch errors included either extra, missing or substituted tones and were manually removed by using the \emph{editData} R package. For onsets, 5.16\% of the trials contained at least one pitch error (extra notes; 2.78\%, missing notes; 2.24\%, substituted notes; 0.13\%). For offsets, 6.24\% of the trials contained at least one pitch error (extra notes; 2.78\%, missing notes; 2.29\%, substituted notes; 1.17\%). In addition to pitch errors, we removed outliers for IOIs, KOT and KV were defined as values more than 3 standard deviations from the mean of each dependent variable and excluded from data analysis. For each dependent variable, this resulted in less than 5\% of overall responses being removed as outliers.
+Data cleaning, preprocessing and statistical analysis were performed in R version 4.0.5. For statistical analysis, only 16th notes with expressive notations were included. Overall, three trials were excluded from data analysis because participants did not follow the sheet music or stopped performing before the end. Pitch errors were identified by comparing the sequence of musical notes produced by a participant with the sequence of musical notes according to the sheet music. Pitch errors included either extra, missing or substituted tones and were manually removed by using the \emph{editData} R package. For onsets, 5.16\% of the trials contained at least one pitch error (extra notes: 2.78\%, missing notes: 2.24\%, substituted notes: 0.13\%). For offsets, 6.24\% of the trials contained at least one pitch error (extra notes: 2.78\%, missing notes: 2.29\%, substituted notes: 1.17\%). In addition to pitch errors, we removed outliers for IOIs, KOT and KV, defined as values more than 3 standard deviations from the mean of each dependent variable and excluded from data analysis. For each dependent variable, this resulted in less than 5\% of overall responses being removed as outliers.
 
-We performed separate analyses for the two expressive techniques (i.e., articulation, dynamics). A paired-sample \emph{t}-test or a Wilcoxon signed-rank tests (a non-parametric alternative to a paired \emph{t}-test) was performed to compare the mean IOIs in the teaching and performing condition. For KOT and KV, we performed a 2 x 2 repeated-measures analysis of variance (ANOVA) with the factors Condition (teaching vs.~performing) and Subcomponent (LS; legato vs.~staccato or FP; forte vs.~piano, respectively). The \emph{afex} R package was used for a repeated-measures ANOVA. For post-hoc comparisons on the estimated marginal means, we used the \emph{emmeans} R package.
+We performed separate analyses for the two expressive techniques (i.e., articulation, dynamics). A paired-sample \emph{t}-test or a Wilcoxon signed-rank tests (a non-parametric alternative to a paired \emph{t}-test) was performed to compare the mean IOIs in the teaching and performing condition. For KOT and KV, we performed a 2 x 2 repeated-measures analysis of variance (ANOVA) with the factors Condition (teaching vs.~performing) and Subcomponent (LS; legato vs.~staccato or FP; forte vs.~piano, respectively). The \emph{t.test} function in the \emph{stats} R package was used for a \emph{t}-test. The \emph{aov\_car} function in the \emph{afex} R package was used for a repeated-measures ANOVA. For post-hoc comparisons on the estimated marginal means, we used the \emph{emmeans} R package.
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/stim-1-1} \caption{\label{fig:stimuli}(A)Non-expressive sheet music. (B)Articulation. The curved line (slur) indicates legato and the dots indicate staccato. (C)Dynamics. The symbol `f' denotes forte and the symbol `p' denotes piano. For data analysis, only the 16th notes were included.}\label{fig:stim-1}
@@ -230,7 +230,7 @@ We performed separate analyses for the two expressive techniques (i.e., articula
 \hypertarget{results}{%
 \subsection{2.2. Results}\label{results}}
 
-All effects are reported as significant at \emph{p} \textless{} .05. We first report results for performance of the piece with the notated expression of articulation (\emph{Figure \ref{fig:stimuli}, B}), followed by performance of the piece with the notated expression of dynamics (\emph{Figure \ref{fig:stimuli}, C}). To recall our predictions, if participants specifically modulate relevant aspects of the expressive techniques they are trying to teach, key-overlap time should reveal exaggerated legato/staccato when teaching articulation, and key velocity should reveal amplificaions of forte and piano when teaching dynamics.
+All effects are reported as significant at \emph{p} \textless{} .05. We first report results for performance of the piece with the notated expression of articulation (\emph{Figure \ref{fig:stimuli}, B}), followed by performance of the piece with the notated expression of dynamics (\emph{Figure \ref{fig:stimuli}, C}). To recall our predictions, if participants play slowly when they are teaching in general, interonset intervals (IOIs) should be larger when teaching. If participants specifically modulate relevant aspects of the expressive techniques they are trying to teach, key-overlap time (KOT) should reveal exaggerated legato/staccato when teaching articulation, and key velocity (KV) should reveal amplifications of forte and piano when teaching dynamics.
 
 \hypertarget{articulation-interonset-intervals-iois}{%
 \subsubsection{2.2.1. Articulation: Interonset Intervals (IOIs)}\label{articulation-interonset-intervals-iois}}
@@ -240,7 +240,7 @@ In order to compare the mean IOIs between the teaching and performing condition,
 \hypertarget{articulation-key-overlap-time-kot}{%
 \subsubsection{2.2.2. Articulation: Key-Overlap Time (KOT)}\label{articulation-key-overlap-time-kot}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) revealed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,30) = 1158, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.94) and a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,30) = 8.31, \emph{p} = 0.007, \(\eta_G^2\) = 0.011; \emph{Figure \ref{fig:kot-1}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that participants produced shorter staccato in the teaching condition {[}\emph{M} = -134.03 (ms), \emph{SD} = 19.86{]} than in the performing condition {[}\emph{M} = -128.35 (ms), \emph{SD} = 20.80{]} (\emph{p} = 0.004) while there was no significant difference in legato between the teaching {[}\emph{M} = 15.91 (ms), \emph{SD} = 15.49{]} and performing condition{[}\emph{M} = 14.00 (ms), \emph{SD} = 17.01{]} (\emph{p} = 0.32).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) revealed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,30) = 1158, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.94) and a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,30) = 8.31, \emph{p} = 0.007, \(\eta_G^2\) = 0.011; \emph{Figure \ref{fig:kot-1}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that participants produced shorter staccato in the teaching condition {[}\emph{M} = -134.03 (ms), \emph{SD} = 19.86{]} than in the performing condition {[}\emph{M} = -128.35 (ms), \emph{SD} = 20.80{]} (\emph{p} = 0.004) while there was no significant difference in legato between the teaching {[}\emph{M} = 15.91 (ms), \emph{SD} = 15.49{]} and performing condition {[}\emph{M} = 14.00 (ms), \emph{SD} = 17.01{]} (\emph{p} = 0.32).
 
 \hypertarget{articulation-key-velocity-kv}{%
 \subsubsection{2.2.3. Articulation: Key Velocity (KV)}\label{articulation-key-velocity-kv}}
@@ -250,12 +250,12 @@ A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~perfo
 \hypertarget{dynamics-interonset-intervals-iois}{%
 \subsubsection{2.2.4. Dynamics: Interonset Intervals (IOIs)}\label{dynamics-interonset-intervals-iois}}
 
-The Wiscoxon Signed-rank test revealed no significant difference between the teaching condition {[}\emph{Mdn} = 186.29 (ms), \emph{IQR} = 21.83{]} and the performing condition {[}\emph{Mdn} = 186.27 (ms), \emph{IQR} = 19.58{]} while playing the piece with the notated dynamics (\emph{p} = 0.111; \emph{Figure \ref{fig:ioi-1}}).
+The Wiscoxon Signed-rank test revealed no significant difference between the teaching condition {[}\emph{Mdn} = 186.29 (ms), \emph{IQR} = 21.83{]} and the performing condition {[}\emph{Mdn} = 186.27 (ms), \emph{IQR} = 19.58{]} while playing the piece with the notated dynamics (\emph{p} = 0.11; \emph{Figure \ref{fig:ioi-1}}).
 
 \hypertarget{dynamics-key-velocity-kv}{%
 \subsubsection{2.2.5. Dynamics: Key Velocity (KV)}\label{dynamics-key-velocity-kv}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 370, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.74) and a significant interaction between Condition and Subcomponent-FP (\emph{F}(1,30) = 6.80, \emph{p} = 0.014, \(\eta_G^2\) = 0.003; \emph{Figure \ref{fig:vel-1}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment revealed that participants produced louder forte in the teaching condition {[}\emph{M} = 82.78, \emph{SD} = 8.30{]} than in the performing condition {[}\emph{M} = 81.66, \emph{SD} = 7.43{]} (\emph{p} = 0.021) while there was no significant difference in piano between the teaching {[}\emph{M} = 60.63, \emph{SD} = 5.07{]} and performing condition{[}\emph{M} = 60.99, \emph{SD} = 4.40{]} (\emph{p} = 0.45).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 370, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.74) and a significant interaction between Condition and Subcomponent-FP (\emph{F}(1,30) = 6.80, \emph{p} = 0.014, \(\eta_G^2\) = 0.003; \emph{Figure \ref{fig:vel-1}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment revealed that participants produced louder forte in the teaching condition {[}\emph{M} = 82.78, \emph{SD} = 8.30{]} than in the performing condition {[}\emph{M} = 81.66, \emph{SD} = 7.43{]} (\emph{p} = 0.021) while there was no significant difference in piano between the teaching {[}\emph{M} = 60.63, \emph{SD} = 5.07{]} and performing condition {[}\emph{M} = 60.99, \emph{SD} = 4.40{]} (\emph{p} = 0.45).
 
 \hypertarget{dynamics-kv-transition-points}{%
 \subsubsection{2.2.6. Dynamics: KV Transition Points}\label{dynamics-kv-transition-points}}
@@ -265,16 +265,16 @@ Additionally, we conducted an exploratory analysis by focusing on specific point
 \hypertarget{dynamics-key-overlap-time-kot}{%
 \subsubsection{2.2.7. Dynamics: Key-Overlap Time (KOT)}\label{dynamics-key-overlap-time-kot}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) revealed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 377, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.31; \emph{Figure \ref{fig:kot-1}}), reflecting more key overlap for forte notes compared to piano notes. Neither the main effect of Condition (\emph{F}(1,30) = 0.42, \emph{p} = 0.520, \(\eta_G^2\) = 0.00) nor the interaction between Condition and Subcomponent-FP (\emph{F}(1,30) = 0.000, \emph{p} = 0.99, \(\eta_G^2\) = 0.000) was significant.
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) revealed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 377, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.31; \emph{Figure \ref{fig:kot-1}}), reflecting more key overlap for forte notes compared to piano notes. Neither the main effect of Condition (\emph{F}(1,30) = 0.42, \emph{p} = 0.52, \(\eta_G^2\) = 0.00) nor the interaction between Condition and Subcomponent-FP (\emph{F}(1,30) = 0.00, \emph{p} = 0.99, \(\eta_G^2\) = 0.00) was significant.
 
 \hypertarget{discussion}{%
 \subsection{2.3. Discussion}\label{discussion}}
 
-The findings from Experiment 1 indicated that skilled pianists modified their performance for teaching purposes. For IOIs (tempo), we found a small but significant slowing down during teaching specifically when playing the piece with the notated articulation. This finding is in line with earlier studies that found slower performance of actions in a teaching context (e.g., Brand et al., 2002; McEllin et al., 2017). However, we did not find a significant difference in tempo when participants were teaching dynamics. It could be that trying to keep the prescribed tempo (conveyed throught the leading metronome) limited the extent to which participants slowed down their performance during teaching. Another possibility is that slower performance may be more or only beneficial to highlight the relation between two notes (i.e.~to what extent two notes overlap) and was therefore employed when teaching articulation, whereas slower performance might not help when teaching dynamics.
+The findings from Experiment 1 indicated that skilled pianists modified their performance for teaching purposes. For IOIs, we found a small but significant slowing down during teaching specifically when playing the piece with the notated articulation. This finding is in line with earlier studies that found slower performance of actions in a teaching context (e.g., Brand et al., 2002; McEllin et al., 2017). However, we did not find a significant difference in tempo when participants were teaching dynamics. It could be that trying to keep the prescribed tempo (conveyed through the leading metronome) limited the extent to which participants slowed down their performance during teaching. Another possibility is that slower performance may be beneficial to highlight the relation between two notes (i.e., to what extent two notes overlap) and was therefore employed when teaching articulation, whereas slower performance might not help when teaching dynamics.
 
-The results for KOT (articulation) and KV (dynamics) showed that participants successfully highlighted the relevant aspects of articulation and dynamics. Specifically, they produced shorter staccato when teaching articulation and produced louder forte when teaching dynamics. Moreover, our exploratory analysis demonstrated that participants made a larger contrast in dynamics at transition points where one of two subcomponents moved to the other (i.e., forte to piano or piano to forte). Importantly, participants did not modulate their performance in terms of irrelevant aspects of the techniques for teaching purposes (e.g., modulating the smoothness of sound while teaching dynamics). These findings confirmed that participants modulated their performance in systematic and fine-grained ways in order to teach expressive techniques in a simple musical scale.
+The results for KOT and KV showed that participants successfully highlighted the relevant aspects of articulation and dynamics. Specifically, they produced shorter staccato when teaching articulation and produced louder forte when teaching dynamics. Moreover, our exploratory analysis demonstrated that participants made a larger contrast in dynamics at transition points where one of two subcomponents moved to the other (i.e., forte to piano or piano to forte). Importantly, participants did not modulate their performance in terms of irrelevant aspects of the techniques for teaching purposes (e.g., modulating the smoothness of sound while teaching dynamics). These findings confirmed that participants modulated their performance in systematic and fine-grained ways in order to teach expressive techniques.
 
-In Experiment 1, we employed a simple musical scale in order to maximize experimental control. To test whether our results generalise to a more naturalistic piece, in Experiment 2, we chose an actual piano pieces and modified it for the purpose of the experiment. If pianists selectively highlight only the relevant aspects of the techniques to be taught also in a more naturalistic piece containing more opportunities for expression, they should again produce longer legato and shorter staccato while teaching articulation. When teaching dynamics, they should be able to produce louder forte and softer piano. Given the findings we observed in Experiment 1, we also predicted that participants would make a larger contrast between forte and piano at transition points, and that they might play more slowly when teaching, especially when teaching articulation.
+In Experiment 1, we employed a simple musical scale in order to maximise experimental control. To test whether our results generalise to a more naturalistic piece, in Experiment 2, we chose an actual piano piece and modified it for the purpose of the experiment. If pianists selectively highlight the relevant aspects of the techniques to be taught also in a more naturalistic piece containing more opportunities for expression, they should again produce longer legato and shorter staccato while teaching articulation. When teaching dynamics, they should produce louder forte and softer piano. Given the findings we observed in Experiment 1, we also predicted that participants would make a larger contrast between forte and piano at transition points, and that they might play more slowly when teaching, especially when teaching articulation.
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-1-1} \caption{\label{fig:ioi-1}Experiment 1: IOIs (ms) when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-ioi-1}
@@ -299,7 +299,7 @@ In Experiment 1, we employed a simple musical scale in order to maximize experim
 \hypertarget{participants-1}{%
 \subsubsection{3.1.1. Participants}\label{participants-1}}
 
-We recruited 21 piano experts who already had a degree in (above bachelor or equivalent) in piano performance/teaching or were studying advanced piano performance at a music school at the time of recruitment. For data analysis, we excluded one participants due to insufficient motor skills, and one because of large tempo deviations (outside 2 standard deviations from the average tempo across participants). Nineteen participants (9 female) were included in the data analysis. Most participants were right-handed (left: 2). They had 15.65 years of practice on average (\emph{SD} = 5.67).
+We recruited 21 piano experts who already had a degree in (above bachelor or equivalent) in piano performance/teaching or were studying advanced piano performance at a music school at the time of recruitment. For data analysis, we excluded one participants due to insufficient motor skills, and one because of large tempo deviations (outside 2 standard deviations from the average tempo across participants). Nineteen participants (9 female) were included in the data analysis. Most participants were right-handed (left: 2) with a mean age of 25.90 (\emph{SD} = 4.68). They had 15.65 years of practice on average (\emph{SD} = 5.67).
 
 \hypertarget{apparatus-and-stimuli-1}{%
 \subsubsection{3.1.2. Apparatus and stimuli}\label{apparatus-and-stimuli-1}}
@@ -336,7 +336,7 @@ A paired-sample \emph{t}-test showed that participants played more slowly in the
 \hypertarget{articulation-key-overlap-ratio-kor}{%
 \subsubsection{3.2.2. Articulation: Key-Overlap Ratio (KOR)}\label{articulation-key-overlap-ratio-kor}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,18) = 2324, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.98) and a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,18) = 6.90, \emph{p} = 0.017, \(\eta_G^2\) = 0.01; \emph{Figure \ref{fig:kor-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that participants produced shorter staccato in the teaching condition {[}\emph{M} = -0.77, \emph{SD} = 0.06{]} than in the performing condition {[}\emph{M} = -0.74, \emph{SD} = 0.04{]} (\emph{p} = 0.001) while there was no significant difference in legato between the teaching {[}\emph{M} = 0.12, \emph{SD} = 0.07{]} and performing condition{[}\emph{M} = 0.12, \emph{SD} = 0.07{]} (\emph{p} = 0.85).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,18) = 2324, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.98) and a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,18) = 6.90, \emph{p} = 0.017, \(\eta_G^2\) = 0.01; \emph{Figure \ref{fig:kor-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that participants produced shorter staccato in the teaching condition {[}\emph{M} = -0.77, \emph{SD} = 0.06{]} than in the performing condition {[}\emph{M} = -0.74, \emph{SD} = 0.04{]} (\emph{p} = 0.001) while there was no significant difference in legato between the teaching {[}\emph{M} = 0.12, \emph{SD} = 0.07{]} and performing condition {[}\emph{M} = 0.12, \emph{SD} = 0.07{]} (\emph{p} = 0.85).
 
 \hypertarget{articulation-key-velocity-kv-1}{%
 \subsubsection{3.2.3. Articulation: Key Velocity (KV)}\label{articulation-key-velocity-kv-1}}
@@ -432,9 +432,6 @@ Campisi, E., \& Özyürek, A. (2013). Iconicity as a communicative strategy: {Re
 \leavevmode\vadjust pre{\hypertarget{ref-csibra_2009}{}}%
 Csibra, G., \& Gergely, G. (2009). Natural pedagogy. \emph{Trends in Cognitive Sciences}, \emph{13}(4), 148--153. \url{https://doi.org/10.1016/j.tics.2009.01.005}
 
-\leavevmode\vadjust pre{\hypertarget{ref-fernald_1985}{}}%
-Fernald, A. (1985). Four-month-old infants prefer to listen to motherese. \emph{Infant Behavior and Development}, \emph{8}(2), 181--195. \url{https://doi.org/10.1016/S0163-6383(85)80005-9}
-
 \leavevmode\vadjust pre{\hypertarget{ref-fukuyama_2015}{}}%
 Fukuyama, H., Qin, S., Kanakogi, Y., Nagai, Y., Asada, M., \& Myowa-Yamakoshi, M. (2015). Infant's action skill dynamically modulates parental action demonstration in the dyadic interaction. \emph{Developmental Science}, \emph{18}(6), 1006--1013. \url{https://doi.org/10.1111/desc.12270}
 
@@ -451,7 +448,10 @@ Lindström, E., Juslin, P. N., Bresin, R., \& Williamon, A. (2003). {``{Expressi
 McEllin, L., Knoblich, G., \& Sebanz, N. (2017). Distinct kinematic markers of demonstration and joint action coordination? {Evidence} from virtual xylophone playing. \emph{Journal of Experimental Psychology: Human Perception and Performance}, \emph{44}(6), 885. \url{https://doi.org/10.1037/xhp0000505}
 
 \leavevmode\vadjust pre{\hypertarget{ref-okazaki_2019}{}}%
-Okazaki, S., Muraoka, Y., \& Osu, R. (2019). Teacher-learner interaction quantifies scaffolding behaviour in imitation learning. \emph{Scientific Reports}, \emph{9}(1), 1--13. \url{https://doi.org/10.1038/s41598-019-44049-x}
+Okazaki, S., Muraoka, Y., \& Osu, R. (2019). Teacher-learner interaction quantifies scaffolding behaviour in imitation learning. \emph{Sci Rep}, \emph{9}(1), 1--13. \url{https://doi.org/10.1038/s41598-019-44049-x}
+
+\leavevmode\vadjust pre{\hypertarget{ref-saint-georges_2013}{}}%
+Saint-Georges, C., Chetouani, M., Cassel, R., Apicella, F., Mahdhaoui, A., Muratori, F., \ldots{} Cohen, D. (2013). Motherese in {Interaction}: {At} the {Cross}-{Road} of {Emotion} and {Cognition}? ({A Systematic Review}). \emph{PLOS ONE}, \emph{8}(10), e78103. \url{https://doi.org/10.1371/journal.pone.0078103}
 
 \leavevmode\vadjust pre{\hypertarget{ref-schaik_2019}{}}%
 Schaik, J. E. van, Meyer, M., Ham, C. R. van, \& Hunnius, S. (2019). Motion tracking of parents' infant- versus adult-directed actions reveals general and action-specific modulations. \emph{Developmental Science}, \emph{0}(0), e12869. \url{https://doi.org/10.1111/desc.12869}
