--- a/experiment-1/analysis/preprocessor/included_summary.Rmd
+++ b/experiment-1/analysis/preprocessor/included_summary.Rmd
@@ -42,32 +42,32 @@ dt_ioi[, .(N = .N, Mean = mean(IOI), SD = sd(IOI)), by = .(SubNr, Condition, Ski
 
 ### KOT (All)
 ```{r kot, echo = FALSE}
-dt_kot[SubNr != 1]
+dt_kot
 ```
 
 ### KOT (Summary)
 ```{r kot-summary, echo = FALSE}
-dt_kot[SubNr != 1, .(N = .N, Mean = mean(KOT), SD = sd(KOT)), by = .(SubNr, Condition, Skill, Subcomponent)]
+dt_kot[, .(N = .N, Mean = mean(KOT), SD = sd(KOT)), by = .(SubNr, Condition, Skill, Subcomponent)]
 ```
 
 ### Key Velocity (All)
 ```{r vel, echo = FALSE}
-dt_vel[SubNr != 1]
+dt_vel
 ```
 
 ### Key Velocity (Summary)
 ```{r vel-summary, echo = FALSE}
-dt_vel[SubNr != 1, .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, Subcomponent)]
+dt_vel[, .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, Subcomponent)]
 ```
 
 ### KV Difference (All)
 ```{r vel-diff, echo = FALSE}
-dt_vel_diff[SubNr != 1]
+dt_vel_diff
 ```
 
 ### KV Difference (Summary)
 ```{r vel-diff-summary, echo = FALSE}
-dt_vel_diff[SubNr != 1, .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, Subcomponent)]
+dt_vel_diff[, .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, Subcomponent)]
 ```
 
 ## Excluded participnats
